# teapot

./: CMakeLists.txt  README.md
.github/workflows/: ci.yaml
debian/: control
script/: build-deb.bash  install-deps.bash
